<resources>
    <string name="app_name">Mobile_lab1</string>
    <string name="author1_name">author1</string>
    <string name="author2_name">author2</string>
    <string name="author3_name">author3</string>
    <string name="author4_name">author4</string>
    <string name="author5_name">author5</string>
    <string name="authors_title">Authors</string>
    <string name="warning_message">please select author and year</string>
    <string name="year1">2000</string>
    <string name="year2">2001</string>
    <string name="year3">2002</string>
    <string name="year4">2003</string>
    <string name="ok_btn">OK</string>
</resources>
